src/test/deca/context/valid/test_pass_1_new_object_with_superclass.deca
// Description:
//    Program testing pass 1, create an object with a superclaa
//
// Results:
//    ok
//
// History:
//    Created on 14/01/2025

class Test1 {
    
}

class Test2 extends Test1{
    
}
