src/test/deca/context/invalid/notYetImplemented/test_pass_1_herit_class_not_exist.deca
// Description:
//    Program testing pass 1, creat an object with an undeclar superclass
//
// Results:
//    ok
//
// History:
//    Created on 14/01/2025

class Test extends NonDeclare{
    
}
